# CaravanSystemsProject

./: README.md  TODO.md  backupdatabase.sh  connecttodatabase.sh  debugserver.sh  setup.cfg  setupgitpd.sh  startdatabase.sh  test
csp-backend/: Dockerfile  create.sql  database.dockerfile  populate.sql
csp-graphql/: setup.cfg
csp-graphql/cspdatabaseresolvers/: main.py
csp-graphql/cspgraphql/: schema.py
csp-graphql/csplogin-manager/: loginmanager.py
csp-graphql/service/: service.py
