[metadata]
name = caravan system graphql backend
version = 0.1.0
description = Serving the needs of front end applications with a data interface.
author_email = paul@padanalytics.co.uk
url = https://github.com/Paul-PADataAnalytics/CaravanSystemsProject
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platform = any
classifiers =
    Programming Language :: Python :: 3.10
    
[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.8
packages = service
test_suite = tests
setup_requires =
    setuptools
    # setuptools >=30.3.0     # minimal version for `setup.cfg`
    # setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
    # setuptools >=46.4.0     # let's you use attr: to extract version from a module
install_requires =
    strawberry-graphql
tests_require =
    pytest
    coverage
    tox

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    if False