[metadata]
name = caravan system graphql backend
version = 0.1.0
description = Serving the needs of front end applications with a data interface.
author_email = paul@padanalytics.co.uk
url = https://github.com/Paul-PADataAnalytics/CaravanSystemsProject
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platform = any
classifiers =
    Programming Language :: Python :: 3.10
    
[options]
zip_safe = true
include_package_data = true
python_requires = >= 3.8
packages = 
    cspgraphql
    cspdatabaseresolvers
test_suite = test
setup_requires =
    setuptools>=38.3.0
install_requires =
    strawberry-graphql
    psycopg[binary]
[options.extras_require]
debug = 
   strawberry-graphql[debug-server]
test = 
    pytest
    coverage
    tox

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    if False

[flake8]
ignore = E701,W292
max-line-length = 160
